--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -12,8 +12,8 @@
                 <div class="offer_box">
                     <div class="offer_image"><a href="{{ path('tour_show', {'slug' : 'highlights-of-mongolia'}) }}"><img src="/images/special_offer.jpg" alt=""></a></div>
                     <div class="offer_text">
-                        <h3><a href="{{ path('tour_show', {'slug' : 'highlights-of-mongolia'}) }}">Highlights of Mongolia</a></h3>
-                        <div class="offer_price">12 days / 11 nights</div>
+                        <h3><a href="{{ path('tour_show', {'slug' : 'khuvsgul-lake-tour'}) }}">Khuvsgul Lake Tour</a></h3>
+                        <div class="offer_price">6 days / 5 nights</div>
                         <div class="offer_descr">
                             We invites you to join us this coming summer for an experience of a lifetime in the awesome landscapes of Mongolia, from mountains, to lakes, to hot dry desert, to rolling hills of open grassland...
                         </div>
@@ -41,13 +41,13 @@
 
                     <div class="special_item">
                         <div class="special_image">
-                            <a href="{{ path('tour_show', {'slug' : 'splendors-of-mongolia'}) }}"><img src="/images/special_offer_bayanzag.jpg" alt=""></a>
+                            <a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}"><img src="/images/special_offer_bayanzag.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
-                            <h3><a href="{{ path('tour_show', {'slug' : 'splendors-of-mongolia'}) }}">Splendors of Mongolia</a></h3>
-                            <div class="info_row"><span>DURATION:</span> 10 days, 9 nights</div>
+                            <h3><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}">Treasures of Mongolia</a></h3>
+                            <div class="info_row"><span>DURATION:</span> 11 days, 10 nights</div>
                             <div class="info_row"><span>REGION:</span> Southern &amp; Central</div>
-                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'splendors-of-mongolia'}) }}">VIEW DETAILS</a></div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
 
@@ -56,11 +56,11 @@
                             <a href="{{ path('tour_show', {'slug' : 'gobi-and-beyond'}) }}"><img src="/images/special_offer_gobi.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
-                            <h3><a href="{{ path('tour_show', {'slug' : 'gobi-and-beyond'}) }}">Gobi & Beyond</a></h3>
+                            <h3><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}">Gobi Desert Tour</a></h3>
                             <div class="info_row"><span>DURATION:</span> 7 days, 6 nights</div>
                             <div class="info_row"><span>REGION:</span> Southern Mongolia</div>
                             <div class="info_row"><span>AVAILABLE:</span> May 01-October 1</div>
-                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'gobi-and-beyond'}) }}">VIEW DETAILS</a></div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
 
@@ -102,11 +102,12 @@
         <div class="box">
             {{ include('Page/_quick_contact.html.twig') }}
         </div>
+
+        <div style="margin-bottom: 10px;" class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="282" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
+
         <a href="{{ path('page_show', {'slug':'trip-calendar-2014'}) }}">
             <img src="/images/baner_300x250.jpg" width="300" height="250" alt="">
         </a>
-
-        <div class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="282" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
     </div>
     </div>
     </div>
