--- a/resources/views/Content/explore-way-of-nomadic-lifestyle.html
+++ b/resources/views/Content/explore-way-of-nomadic-lifestyle.html
@@ -1,25 +1,25 @@
 <h2>Most Mongolian nomads live in round huts, but the Tsaatan people use cone-shaped tents</h2>
 <p>The Land and the nomadic lifestyle have shaped almost every aspect of the lives of Mongolia&rsquo;s people. For centuries, Mongolians moved with their herds, going wherever the land and the weather took them. This gave them a deep love for the land and for freedom. Modern Mongolia has also been affected by the long years of communism and by the swift changes that have happened recently. These influences have combined to give Mongolians a unique outlook on life that combines ancient tradition with new ideas.</p>
 <div>
-    <img src="http://mongolianadventuretours.com/images/ail_1.jpg" alt="Mongol ail" />
-    <img src="http://mongolianadventuretours.com/images/ail_2.jpg" alt="Mongol ail" />
-    <img src="http://mongolianadventuretours.com/images/ail_3.jpg" alt="Mongol ail" />
+    <img src="/images/ail_1.jpg" alt="Mongol ail" />
+    <img src="/images/ail_2.jpg" alt="Mongol ail" />
+    <img src="/images/ail_3.jpg" alt="Mongol ail" />
 </div>
 <h2>Mongolians maintain a strong connection to the land</h2>
 <p>The nomadic people of Mongolia have learned how to live in harmony with their surroundings. They have adapted to the country&rsquo;s extreme environments and weather. They can move from areas that are not suited for grazing to place that are better for themselves and their livestock.</p>
 <h2>The Nomadic Tsaatan people live in northern Mongolia. They raise reindeer, which they use for transportation, milk and meat.</h2>
 <p>Rural nomads and people who live in the cities tend to have a big difference in attitudes. Mongolians in the cities tend to act more &ldquo;Western&rdquo; and enjoy all the advantages that a city has to offer. The rural nomads live with few possessions and revere the natural world. Most of the country&rsquo;s political and economic changes have not affected the nomads the way they have people in the city. Nomads take the changes in stride and keep moving. Though the nomads have few possessions, they have rich culture and tradition that are part of Mongolian spirit.</p>
 <div>
-    <img src="http://mongolianadventuretours.com/images/tsaa_1.jpg" alt="Tsaatan" />
-    <img src="http://mongolianadventuretours.com/images/tsaa_2.jpg" alt="Tsaatan" />
-    <img src="http://mongolianadventuretours.com/images/tsaa_3.jpg" alt="Tsaatan" />
+    <img src="/images/tsaa_1.jpg" alt="Tsaatan" />
+    <img src="/images/tsaa_2.jpg" alt="Tsaatan" />
+    <img src="/images/tsaa_3.jpg" alt="Tsaatan" />
 </div>
 <h2>A nomadic family erects a ger, it takes about an hour to put one up</h2>
 <p>The Mongolian yurt or ger as it is known in Mongolia itself, has been used for thousands of years by the nomads of Central Asia and is still a common sight in many countries in the region.</p>
 <div>
-    <img src="http://mongolianadventuretours.com/images/ger1.jpg" alt="Mongol ger" />
-    <img src="http://mongolianadventuretours.com/images/ger2.jpg" alt="Mongol ger" />
-    <img src="http://mongolianadventuretours.com/images/ger3.jpg" alt="Mongol ger" />
+    <img src="/images/ger1.jpg" alt="Mongol ger" />
+    <img src="/images/ger2.jpg" alt="Mongol ger" />
+    <img src="/images/ger3.jpg" alt="Mongol ger" />
 </div>
 <p>With its unique design, structure and practical features, the yurt is still a popular habitation. Mongolian yurts (ger) are attracting interest from people in many parts of the world as an ecologically friendly and attractive living space that can be used for a variety of purposes.</p>
 <p>The terms yurt and ger are interchangeable and describe the traditional portable Mongolian habitation consisting of a wooden frame and felt walls.</p>
@@ -27,9 +27,9 @@
 <p>The yurt (ger) is a circular structure built using a wooden, accordion frame that can be easily taken down, made compact for carrying, and reassembled. On this frame are placed three to four layers of felt, traditionally made from sheep&rsquo;s wool, and an outer layer of waterproof canvas. The felt and canvas are secured to the wooden frame and the resulting structure can stand securely in one place for months or even years at a time.</p>
 <p>The wooden frame of the yurt (ger) is held together by opposing stresses designed into the structure and by horse, yak and camel hair straps. A central column holds up the struts of the roof, which fan out from an opening that accommodates a stove pipe and can be opened up to the elements on a warm day or covered in the event of rain or cold temperatures. The lower sides of the outer wrapping of the yurt can also be raised to allow air to circulate freely to cool the interior on warm days.</p>
 <div>
-    <img src="http://mongolianadventuretours.com/images/ger4.jpg" alt="Mongol ger"/>
-    <img src="http://mongolianadventuretours.com/images/ger5.jpg" alt="Mongol ger"/>
-    <img src="http://mongolianadventuretours.com/images/ger6.jpg" alt="Mongol ger"/>
+    <img src="/images/ger4.jpg" alt="Mongol ger"/>
+    <img src="/images/ger5.jpg" alt="Mongol ger"/>
+    <img src="/images/ger6.jpg" alt="Mongol ger"/>
 </div>
 <h2>What are gers used for?</h2>
 <p>If you have been to Mongolia, you will surely already have an idea of how you wish to use a yurt. However, we would like to provide some ideas on how a yurt (ger) might contribute to your lifestyle for those who do not have this experience. Although nomads in Mongolia use yurts all year round in temperatures as low as -35 and as high as +40 degrees Celsius, we recommend using yurts (gers) in temperatures between about -10 and +30 degrees Celsius as it takes special care and expertise to keep the interior of a yurt warm during conditions colder than -10 degrees Celsius.</p>
@@ -50,7 +50,7 @@
     <li>The experience of free living</li>
 </ul>
 <div>
-    <img src="http://mongolianadventuretours.com/images/ger7.jpg" alt="Mongol ger" />
-    <img src="http://mongolianadventuretours.com/images/ger8.jpg" alt="Mongol ger" />
-    <img src="http://mongolianadventuretours.com/images/ger9.jpg" alt="Mongol ger" />
+    <img src="/images/ger7.jpg" alt="Mongol ger" />
+    <img src="/images/ger8.jpg" alt="Mongol ger" />
+    <img src="/images/ger9.jpg" alt="Mongol ger" />
 </div>
