--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -104,7 +104,7 @@
                     <div class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="950" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
                 </div>
             </div>
-            <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ftravelallmongolia&width=250&layout=standard&action=like&show_faces=true&share=true&height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:80px;" allowTransparency="true"></iframe>
+            {#<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ftravelallmongolia&width=250&layout=standard&action=like&show_faces=true&share=true&height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:80px;" allowTransparency="true"></iframe>#}
         </div>
     {% endblock %}
 
@@ -166,7 +166,6 @@
 
         </div>
     </div>
-
 </div><!--end wrapper-->
 
 </body>
