--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -240,8 +240,8 @@
 
                     <!-- subscribe buttons -->
                     <div class="widget-container subscribe_btn">
-                        <mark style="padding: 10px;display: block;">OFFER 10% May sale discount</mark>
-                        <br/>
+                        {#<mark style="padding: 10px;display: block;">OFFER 10% May sale discount</mark>
+                        <br/>#}
                         <div>
                             <a href="{{ path('page_show', {'slug':'trip-calendar-2014'}) }}"><img src="/images/group_travel_2014.jpg" alt="Join our group travel 2014"/></a>
                         </div>
