--- a/resources/views/Content/travel-accomodations.html
+++ b/resources/views/Content/travel-accomodations.html
@@ -48,3 +48,19 @@
     <p>The Blue Sky Hotel & Tower is an elegant and a luxury hotel with spacious and exquisitely designed guest rooms, complete with delectable and superb dining cuisine from Asian to Western, perfect with specialized one and only service philosophy, and strategically located in bustling Sukhbaatar District, in the heart of Ulaanbaatar`s leading shopping and business area with spectacular and dramatic views. Unique architectural concept of “Sail Boat” and public areas which have been all designed for our guest comfort and well-being in mind. Spectacle heart of premium downtown location and convince of approaching to all necessary destination will bring the best success to your business and unforgettable remembrance in your life.</p>
     <img title="The Blue Sky Hotel" src="/images/bluesky2_mini.jpg" alt="The Blue Sky Hotel" class="frame_center" style="margin-top: 20px;"/>
 </div>
+
+<div class="blog-content-bordered" style="font-size: 16px; margin-top: 30px;">
+    <h2>Ramada Hotel</h2>
+    <img title="Ramada Hotel" src="/images/ramada1.jpg" alt="Ramada Hotel" class="frame_center" style="margin-top: 20px;"/>
+    <p>Ramada Ulaanbaatar Citycenter hotel, near Gandan Tegchilen Khiid, combines the best accommodations and a great location in the heart of the city. Each morning, our Ulaanbaatar hotel serves a free breakfast, and we provide free newspapers for your convenience. Scout out area attractions from your hotel room with free Wi-Fi Internet access or at our free business center PC, then head out to see the local sites. When you return, work out at our on-site gym or relax in front of your 42-inch TV. Free large-vehicle parking is available, and kids 17 and under stay free with an adult.</p>
+    <p><strong>LOCAL ATTRACTIONS</strong></p>
+    <p>All the best attractions are within your reach when you book your room at our Ulaanbaatar hotel. Gandan Tegchilen Khiid, the largest Buddhist temple in Mongolia, is within walking distance. For a look into the history of Mongolia, visit Bogd Khans Winter Palace, one of the most impressive structures in the country from a historical and aesthetic standpoint. Take in a symphony, opera or ballet performance at the Ulaanbaatar Opera House, or grab your camera and take a walk though Sukhbaatar Square, one of the top tourist destinations in the city, just two miles away. For shopping, head to Sky Shopping Center, Max Shopping Mall or Grand Shopping Mall, all nearby.</p>
+    <img title="Ramada Hotel" src="/images/ramada2.jpg" alt="Ramada Hotel" class="frame_center" style="margin-top: 20px;"/>
+    <img title="Ramada Hotel" src="/images/ramada3.jpg" alt="Ramada Hotel" class="frame_center" style="margin-top: 20px;"/>
+    <p><strong>DINING OPTIONS</strong></p>
+    <p>An Asian Food Court, Berlin Burger, Sky Lounge Bar and a LAVAZZA Coffee Lounge are all on-site, and many popular restaurants are near our Ulaanbaatar hotel. Enjoy Chinese cuisine at Mr. Wang or try the vegetarian fare at Govinda’s Vegetarian Café. Joe’s Corner serves American-style burgers and hot dogs.</p>
+    <p><strong>TRANSPORTATION SERVICES</strong></p>
+    <p>Shuttle service is available between the airport and our hotel in Ulaanbaatar, and limo service is available for a fee.</p>
+    <p><strong>BUSINESS AND EVENT FACILITIES</strong></p>
+    <p>We offer a boardroom style conference space and a business center with 24-hour copy, fax and print services, plus free PC and high-speed Internet access.</p>
+</div>
