--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -11,7 +11,7 @@
         <nav id="topmenu" class="clearfix">
             <ul class="dropdown">
                 <li class="menu-level-0 current-menu-ancestor"><a href="{{ path('homepage') }}"><span>Home</span></a></li>
-                <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'trip-calendar-2014'}) }}"><span>Trip calendar</span></a></li>
+                <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'trip-calendar-2015'}) }}"><span>Trip calendar</span></a></li>
                 <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'about-mongolia'}) }}"><span>About Mongolia</span></a>
                     <ul class="submenu-1">
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'nomadic-experience'}) }}"><span>Nomadic experience</span></a></li>
@@ -30,8 +30,12 @@
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}"><img src="/images/featured_thumb_bayanzag.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'gobi-and-beyond'}) }}">Gobi Desert tour <br/>(7 days, 6 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'gobi-and-beyond'}) }}"><img src="/images/featured_thumb_gobi.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}">Gobi Desert tour <br/>(7 days, 6 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}"><img src="/images/featured_thumb_gobi.jpg" alt=""></a></div>
+                                    </li>
+                                    <li class="post-item">
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia'}) }}">Taste of Mongolia <br/>(10 days, 9 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia'}) }}"><img src="/images/featured_thumb_taste.jpg" alt=""></a></div>
                                     </li>
                                 </ul>
                             </div>
@@ -49,6 +53,10 @@
                                         <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'horse-trip-around-khuvsgul-lake'}) }}">Horse trip around Khuvsgul lake <br/>(8 days, 7 nights)</a></div>
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'horse-trip-around-khuvsgul-lake'}) }}"><img src="/images/featured_thumb_khuvsgul.jpg" alt=""></a></div>
                                     </li>
+                                    <li class="post-item">
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">A Classic Journey of Mongolia<br/>(16 days, 15 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}"><img src="/images/featured_thumb_classic.jpg" alt=""></a></div>
+                                    </li>
                                 </ul>
                             </div>
                             <!--/ widget latest entries from category -->
@@ -58,12 +66,16 @@
                             <div class="widget-container widget_featured_posts">
                                 <ul>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'naadam-festival-journey'}) }}">Naadam Festival Journey<br/>(12 days, 11 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'naadam-festival-journey'}) }}"><img src="/images/featured_thumb_naadam.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Naadam Festival Journey<br/>(12 days, 11 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}"><img src="/images/featured_thumb_naadam.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
                                         <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'khuvsgul-lake-tour'}) }}">Khuvsgul lake tour<br/>(6 days, 5 nights)</a></div>
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'khuvsgul-lake-tour'}) }}"><img src="/images/featured_thumb_turtle.jpg" alt=""></a></div>
+                                    </li>
+                                    <li class="post-item">
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'luxury-tour-with-naadam-festival'}) }}">Luxury tour with Naadam festival<br/>(12 days, 11 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'luxury-tour-with-naadam-festival'}) }}"><img src="/images/featured_thumb_luxury.jpg" alt=""></a></div>
                                     </li>
                                 </ul>
                             </div>
