--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -32,9 +32,9 @@
                             <a href="{{ path('tour_show', {'slug' : 'naadam-festival-journey'}) }}"><img src="/images/special_offer_naadam.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
-                            <h3><a href="{{ path('tour_show', {'slug' : 'naadam-festival-journey'}) }}">Naadam Festival Journey</a></h3>
-                            <div class="info_row"><span>DURATION:</span> 11 days, 10 nights</div>
-                            <div class="info_row"><span>AVAILABLE:</span> July 23 - Aug 2</div>
+                            <h3><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Naadam Festival Journey</a></h3>
+                            <div class="info_row"><span>DURATION:</span> 12 days, 11 nights</div>
+                            <div class="info_row"><span>AVAILABLE:</span> July 2 - July 13</div>
                             <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'naadam-festival-journey'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
     <div class="content">
         <div class="banner_slider" id="banner_slider">
             <div class="banner_item">
-                <a href="{{ path('tour_show', {'slug':'naadam-festival-journey'}) }}">
+                <a href="{{ path('tour_show', {'slug':'taste-of-mongolia-with-naadam-festival'}) }}">
                     <img src="/images/baner_big_naadam.jpg" alt="">
                 </a>
             </div>
@@ -105,7 +105,7 @@
 
         <div style="margin-bottom: 10px;" class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="282" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
 
-        <a href="{{ path('page_show', {'slug':'trip-calendar-2014'}) }}">
+        <a href="{{ path('page_show', {'slug':'trip-calendar-2015'}) }}">
             <img src="/images/baner_300x250.jpg" width="300" height="250" alt="">
         </a>
     </div>
