--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -100,8 +100,9 @@
         <div class="container">
             <div class="content" style="margin-top: 20px;margin-bottom: 10px;">
                 {# FACEBOOK LIKE #}
-                <div style="background-color: #ffffff; ">
-                    <div class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="950" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
+                <div style="background-color: #ffffff; overflow: hidden;">
+                    <div style="width: 470px; margin-right: 10px; float: left"><a href="javascript:;"><img src="http://placehold.it/470x240"/></a></div>
+                    <div class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="470" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
                 </div>
             </div>
             {#<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ftravelallmongolia&width=250&layout=standard&action=like&show_faces=true&share=true&height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:80px;" allowTransparency="true"></iframe>#}
