--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -3,12 +3,19 @@
 <div class="header_top">
     <div class="container">
 
+        <div class="abs-info">
+            <span>E-mail us: <a href="mailto:info@travelallmongolia.com">info@travelallmongolia.com</a></span>
+            <span>|&nbsp;&nbsp;&nbsp;Call us: <a href="tel:+97699000601">976-99000601</a></span>
+            <script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script>
+            <span>|&nbsp;&nbsp;&nbsp;Skype: <a href="skype:Soyoloo_Mongolianluxurytours?chat"><img src="http://mystatus.skype.com/smallclassic/Soyoloo_Mongolianluxurytours" style="border: none;" width="114" height="20" alt="My status"></a></span>
+        </div>
+
         <div class="logo">
             <a href="{{ path('homepage') }}"><img src="/img/logo.png" alt="" width="150"></a>
         </div>
 
         <!-- topmenu -->
-        <nav id="topmenu" class="clearfix">
+        <nav id="topmenu" class="clearfix" style="padding-top: 30px;">
             <ul class="dropdown">
                 <li class="menu-level-0 current-menu-ancestor"><a href="{{ path('homepage') }}"><span>Home</span></a></li>
                 <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'trip-calendar-2015'}) }}"><span>Trip calendar</span></a></li>
