--- a/resources/views/Tour/splendors_of_mongolia.html.twig
+++ b/resources/views/Tour/splendors_of_mongolia.html.twig
@@ -227,6 +227,8 @@
                                 {{ form_widget(form.name, { 'attr': {'class': 'input'} }) }}</p>
                             <p><label>Your email address</label><br>
                                 {{ form_widget(form.email, { 'attr': {'class': 'input'} }) }}</p>
+                            <p><label>Your phone number</label><br>
+                                {{ form_widget(form.phone, { 'attr': {'class': 'input'} }) }}</p>
                             <p><label>Your message</label><br>
                                 {{ form_widget(form.content, { 'attr': {'class': 'input', 'rows': '4'} }) }}</p>
 
