--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -10,10 +10,10 @@
             <div class="week_offer">
                 <h2>SPECIAL OFFER</h2>
                 <div class="offer_box">
-                    <div class="offer_image"><a href="{{ path('tour_show', {'slug' : 'highlights-of-mongolia'}) }}"><img src="/images/special_offer.jpg" alt=""></a></div>
+                    <div class="offer_image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}"><img src="/images/special_offer.jpg" alt=""></a></div>
                     <div class="offer_text">
-                        <h3><a href="{{ path('tour_show', {'slug' : 'khuvsgul-lake-tour'}) }}">Khuvsgul Lake Tour</a></h3>
-                        <div class="offer_price">6 days / 5 nights</div>
+                        <h3><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Taste of Mongolia with Naadam</a></h3>
+                        <div class="offer_price">12 days / 11 nights</div>
                         <div class="offer_descr">
                             We invites you to join us this coming summer for an experience of a lifetime in the awesome landscapes of Mongolia, from mountains, to lakes, to hot dry desert, to rolling hills of open grassland...
                         </div>
@@ -44,10 +44,10 @@
                             <a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}"><img src="/images/special_offer_bayanzag.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
-                            <h3><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}">Treasures of Mongolia</a></h3>
-                            <div class="info_row"><span>DURATION:</span> 11 days, 10 nights</div>
-                            <div class="info_row"><span>REGION:</span> Southern &amp; Central</div>
-                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}">VIEW DETAILS</a></div>
+                            <h3><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">A Classic Journey of Mongolia</a></h3>
+                            <div class="info_row"><span>DURATION:</span> 16 days, 15 nights</div>
+                            <div class="info_row"><span>AVAILABLE:</span> May 01-October 1</div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
 
