--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -101,7 +101,7 @@
             <div class="content" style="margin-top: 20px;margin-bottom: 10px;">
                 {# FACEBOOK LIKE #}
                 <div style="background-color: #ffffff; overflow: hidden;">
-                    <div style="width: 470px; margin-right: 10px; float: left"><a href="javascript:;"><img src="http://placehold.it/470x240"/></a></div>
+                    <div style="width: 470px; margin-right: 10px; float: left"><a href="/tour/taste-of-mongolia-with-naadam-festival.html"><img src="/images/banner.jpg"/></a></div>
                     <div class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="470" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
                 </div>
             </div>
