--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -29,19 +29,19 @@
 
                     <div class="special_item">
                         <div class="special_image">
-                            <a href="{{ path('tour_show', {'slug' : 'naadam-festival-journey'}) }}"><img src="/images/special_offer_naadam.jpg" alt=""></a>
+                            <a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}"><img src="/images/special_offer_naadam.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
                             <h3><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Naadam Festival Journey</a></h3>
                             <div class="info_row"><span>DURATION:</span> 12 days, 11 nights</div>
                             <div class="info_row"><span>AVAILABLE:</span> July 2 - July 13</div>
-                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'naadam-festival-journey'}) }}">VIEW DETAILS</a></div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
 
                     <div class="special_item">
                         <div class="special_image">
-                            <a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}"><img src="/images/special_offer_bayanzag.jpg" alt=""></a>
+                            <a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}"><img src="/images/special_offer_bayanzag.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
                             <h3><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">A Classic Journey of Mongolia</a></h3>
@@ -53,7 +53,7 @@
 
                     <div class="special_item">
                         <div class="special_image">
-                            <a href="{{ path('tour_show', {'slug' : 'gobi-and-beyond'}) }}"><img src="/images/special_offer_gobi.jpg" alt=""></a>
+                            <a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}"><img src="/images/special_offer_gobi.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
                             <h3><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}">Gobi Desert Tour</a></h3>
