--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -72,3 +72,49 @@
         <span style="color:#8b4513;"><strong>Jane Ferguson Group from Australia</strong></span></p>
 </blockquote>
 </div>
+<div class="frame_quote"><blockquote>
+    <p>
+        <em>It is truly an experience, to be with the family. Very impressed with what the desert had to offer. The kids were always up for the adventures planned for us. We were always surrounded by nice people, good food and AMAZING scenery. Quite a family destination. From this experience makes us want to come back Mongolia, again and again and again. </em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Adam Singer family, USA</strong></span></p>
+</blockquote>
+</div>
+<div class="frame_quote"><blockquote>
+    <p>
+        <em>I was looking for an escorted trip that would show me the highlights of Mongolia in an authentic way, and Travel All Mongolia hit the spot. They're the only 100% Mongolian owned and operated tour operator there, and no matter where I wanted to go, they were accommodating and helpful. They are true "aficionados" of the destination and have a great network of resources all over the country. Thank you Soyoloo, Travel All Mongolia, for a wonderful trip!</em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Rachel Haile, USA</strong></span></p>
+</blockquote>
+</div>
+<div class="frame_quote"><blockquote>
+    <p>
+        <em>Wow! what an incredible trip.  How are things in Mongolia? on behalf of all
+            the participants I wish to thank you for all your kind and generous gesture
+            you have done. We all had a great time and your country is fantastic.  We did so much in such little time; we  enjoyed the Gobi, the food, the sightseeing in U.B. We experience
+            the country; the Flaming Cliffs, the Eagle Valley, the sand Dunes and the
+            Petroglyphs.</em></p>
+    <p><em>
+            Everyone had such a good time and I hope that you will someday come visit
+            us. We did quite a bit of shopping too, we were amazed by the sunrise and
+            sunsets which were spectacular.  We are all going to promote Mongolia
+            through clients, friends, colleagues, etc., We enjoyed the gers; riding the
+            camels and your guide Bulgaa is excellent.  We really appreciated having her
+            tell us the stories about your country.  The drivers both did their best,
+            very good to us and careful with the roads and we had such a wonderful time.
+            Again thank you; everyone on the tour joins me to thank you and wish you all
+            the best to you and yours.</em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Luisa Lu, Group from USA</strong></span></p>
+</blockquote>
+</div>
+<div class="frame_quote"><blockquote>
+    <p>
+        <em>Everything about the trip was great! Operated smoothly if a problem arose, Travel All Mongolia resolved the issue immediately. Additional, unexpected activities the enhanced the program were added.</em></p>
+    <p>
+        <em>    Bulgaa was fantastic! One of the best guides i have had. Drivers were fun caring and had really great driving skills. Road were difficult and bumpy but drivers did an excellent job maneuvering vehicles.</em></p>
+    <p>
+        <em>    Overall, Travel All Mongolia did an excellent job providing top quality service that allowed me to thoroughly enjoy this beautiful country without having to worry about logistics. Our guide handled everything flawlessly! The drivers were awesome. I hope to come back in the near future and spend more time exploring. </em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Kerina Rowley, USA</strong></span></p>
+</blockquote>
+</div>
