--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -95,6 +95,7 @@
                 <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'about-us'}) }}"><span>About us</span></a>
                     <ul class="submenu-1">
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'why-travel-with-us'}) }}"><span>Why Travel With Us</span></a></li>
+                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'testimonials'}) }}"><span>Testimonials</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'experience-luxury-in-mongolia'}) }}"><span>Experience luxury in Mongolia</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('contact') }}"><span>Contact us</span></a></li>
                     </ul>
